--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,51 @@
 	background: url(../images/Preloader_2.gif) center no-repeat #fff;
 }
 
+#leftfold{
+	background-image: url("../images/pexels-photo-326424.jpeg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+
+.overlay {
+    position: relative;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+	width: 100%;
+  top: 92%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay:hover .image {
+  opacity: 0.3;
+}
+
+.overlay:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
+
 p.txt{
   font-size: 14px;
   max-width: 170px;
